infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutx
  labels:
    app.kubernetes.io/name: mutx
    app.kubernetes.io/instance: mutx
    helm.sh/chart: mutx-0.1.0
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mutx
    app.kubernetes.io/instance: mutx
